--- a/src/components/inputs/input.module.css
+++ b/src/components/inputs/input.module.css
@@ -1,6 +1,7 @@
 .input {
-    padding: 15px 30px;
-    border: 0;
-    background-color: #e7e7e7;
-    border-radius: 10px;
+  padding: 15px 30px;
+  border: 0;
+  background-color: #e7e7e7;
+  border-radius: 10px;
+  color: black;
 }
