--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,71 @@
-html,
+:root {
+  --bg-black-900: #f2f2f2;
+  --bg-black-100: #fdf9ff;
+  --bg-black-50: #e8dfec;
+  --text-black-900: #302e4d;
+  --text-black-700: #504e70;
+}
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: black;
+  background: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+}
+.title {
+  text-align: center;
+}
+.icon_name {
+  font-size: 50px;
+}
+.person {
+  text-align: center;
+}
+.um {
+  height: 1px;
+  float: left;
+  width: 240px;
+}
+.dois {
+  width: 40px;
+}
+.tres {
+  height: 1px;
+  float: right;
+  width: 220px;
+}
+.quadro {
+  display: flex !important;
+}
+.full {
+  width: 100%;
+  height: 500px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.perfil {
+  box-shadow: 0px 1px 2px 5px var(--bg-black-50);
+  background-color: var(--bg-black-100);
+  width: 30%;
+  float: left;
 }
-
-* {
-  box-sizing: border-box;
+.resto {
+  background-color: green;
+  text-align: center;
+  height: 125.38px;
+  float: right;
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.icon_veiculo {
+  background-color: rgb(255, 0, 191);
+  float: left;
+  text-align: center;
+  width: 30%;
+  height: 125.38px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
