--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,13 +42,14 @@ body {
 }
 
 .perfil {
-  box-shadow: 0px 1px 2px 5px var(--bg-black-50);
+  box-shadow: 0px 1px 1px 5px var(--bg-black-50);
   background-color: var(--bg-black-100);
   width: 30%;
   float: left;
 }
 .resto {
-  background-color: green;
+  box-shadow: 5px 0px 2px 5px var(--bg-black-50);
+  background-color: var(--bg-black-100);
   text-align: center;
   height: 125.38px;
   float: right;
@@ -59,8 +60,9 @@ body {
   align-items: center;
 }
 .icon_veiculo {
-  font-size: 60px;
-  background-color: rgb(255, 0, 191);
+  box-shadow: 0px 1px 2px 5px var(--bg-black-50);
+  background-color: var(--bg-black-100);
+  font-size: 80px;
   float: left;
   text-align: center;
   width: 30%;
