--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@ body {
   text-align: center;
 }
 .icon_name {
+  color: #187711;
   font-size: 50px;
 }
 .person {
@@ -60,6 +61,7 @@ body {
   align-items: center;
 }
 .icon_veiculo {
+  color: #187711;
   box-shadow: 0px 1px 2px 5px var(--bg-black-50);
   background-color: var(--bg-black-100);
   font-size: 80px;
