--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,15 +38,16 @@ body {
   display: flex !important;
 }
 .full {
+  display: flex;
   width: 100%;
-  height: 500px;
+  height: auto;
 }
 
 .perfil {
   box-shadow: 0px 1px 1px 5px var(--bg-black-50);
   background-color: var(--bg-black-100);
   width: 30%;
-  float: left;
+  display: inline-block;
 }
 .resto {
   box-shadow: 5px 0px 2px 5px var(--bg-black-50);
@@ -73,4 +74,36 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.menu .list .btn {
+  border-radius: 10px;
+  font-size: 40px;
+  margin-top: 20px;
+}
+.btn {
+  align-items: center;
+  width: 100%;
+}
+.menu .list li {
+  border-radius: 4px;
+  list-style: none;
+}
+.list {
+  padding-left: 0px !important;
+}
+.btn_1 {
+  float: left;
+  height: 1px;
+  width: 25%;
+}
+.btn_2 {
+  float: left;
+  height: auto;
+  width: 50%;
+}
+.btn_3 {
+  float: left;
+  height: 1px;
+  width: 25%;
 }
