--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,7 +66,7 @@ body {
   box-shadow: 0px 1px 2px 5px var(--bg-black-50);
   background-color: var(--bg-black-100);
   font-size: 80px;
-  float: left;
+  float: right;
   text-align: center;
   width: 30%;
   height: 125.38px;
